--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
   "homepage": "https://github.com/LambdaSchool/node-api3-project#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "knex": "^0.20.11",
+    "log-timestamp": "^0.3.0",
+    "morgan": "^1.10.0",
+    "react-timestamp": "^5.1.0",
+    "shortid": "^2.2.15",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
